Ensure that the blurred grid is not visible.

--- a/frontend/app/css/detail.css
+++ b/frontend/app/css/detail.css
@@ -131,4 +131,5 @@
     width: 1920px; height: 1080px;
     text-align: center;
     font-size: 32px; font-style: italic;
+    background-color: black;
     }
